Fix spacing and remove warnings.

--- a/css/back/global.less
+++ b/css/back/global.less
@@ -156,7 +156,6 @@ body {
                 color: @white;
                 border-bottom: 2px solid @white-alpha-1;
                 padding-bottom: .5em;
-                margin-bottom: 1em;
             }
 
             label {
