--- a/css/back/views/update-saint.css
+++ b/css/back/views/update-saint.css
@@ -684,7 +684,6 @@ body {
   color: #fff;
   border-bottom: 2px solid rgba(255, 255, 255, 0.1);
   padding-bottom: 0.5em;
-  margin-bottom: 1em;
 }
 .wrapper #content form label {
   font-weight: bold;
